src/test/ui/const-len-underflow-separate-spans.stderr
error: referenced constant
  --> $DIR/const-len-underflow-separate-spans.rs:20:17
   |
LL | const LEN: usize = ONE - TWO;
   |                    --------- attempt to subtract with overflow
...
LL |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^
   |
   = note: #[deny(const_err)] on by default

error: this expression will panic at runtime
  --> $DIR/const-len-underflow-separate-spans.rs:20:17
   |
LL |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^ referenced constant has errors

error: referenced constant
  --> $DIR/const-len-underflow-separate-spans.rs:20:17
   |
LL | const LEN: usize = ONE - TWO;
   |                    --------- attempt to subtract with overflow
...
LL |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^

error[E0080]: referenced constant
  --> $DIR/const-len-underflow-separate-spans.rs:20:12
   |
LL | const LEN: usize = ONE - TWO;
   |                    --------- attempt to subtract with overflow
...
LL |     let a: [i8; LEN] = unimplemented!();
   |            ^^^^^^^^^

error[E0080]: could not evaluate constant expression
  --> $DIR/const-len-underflow-separate-spans.rs:20:12
   |
LL |     let a: [i8; LEN] = unimplemented!();
   |            ^^^^^---^
   |                 |
   |                 referenced constant has errors

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0080`.
